# ppudeut

./: .agent-config  .gitignore  API.md  CODE_AUDIT_REPORT.md  CONTRIBUTING.md  IMPROVEMENT_CHECKLIST.md  README.md  UI_UX_IMPROVEMENT_REPORT.md  app-icon.icns  eslint.config.js  package-lock.json  package.json
.github/workflows/: ci.yml
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs
web/: accessibility.js  backup-utils.js  confetti-manager.js  constants.js  index.html  main.js  performance-utils.js  practicality-manager.js  security-utils.js  sound-manager.js  styles.css  swipe-gestures.js  test-integration.js  test-security-utils.js  test-todo-core.js  todo-core.js  types.js  ui-utils.js
